# Projeto-de-EDOO.

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
include/: Paciente.h
my-app/src/app/: layout.tsx  page.tsx
src/: Paciente.cpp  main.cpp
